Fix spacing in templates

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 /* Stick footer to the bottom */
 .content-wrapper {
-    min-height: calc(100vh - 177px);
+    min-height: calc(100vh - 201px);
 }
 
 
